# swagger-output.json
@@ -273,12 +273,12 @@
         ]
       }
     },
-    "/api/user/profile/{user_id}": {
+    "/api/user/profileWall/{user_id}": {
       "get": {
         "tags": [
           "User - 會員"
         ],
-        "description": "取得個人貼文名單 API",
+        "description": "取得個人動態牆 API",
         "parameters": [
           {
             "name": "user_id",
@@ -1538,6 +1538,178 @@
             "createdAt": {
               "type": "string",
               "example": "貼文建立時間"
+            }
+          }
+        }
+      }
+    },
+    "getProfileWall": {
+      "type": "object",
+      "properties": {
+        "status": {
+          "type": "boolean",
+          "example": true
+        },
+        "message": {
+          "type": "string",
+          "example": "取得個人動態牆成功"
+        },
+        "data": {
+          "type": "object",
+          "properties": {
+            "user": {
+              "type": "object",
+              "properties": {
+                "_id": {
+                  "type": "string",
+                  "example": "會員ID"
+                },
+                "name": {
+                  "type": "string",
+                  "example": "會員名"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "會員E-mail"
+                },
+                "photo": {
+                  "type": "string",
+                  "example": "頭貼網址"
+                },
+                "sex": {
+                  "type": "string",
+                  "example": "[male、female]"
+                },
+                "followers": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "user": {
+                        "type": "object",
+                        "properties": {
+                          "_id": {
+                            "type": "string",
+                            "example": "會員ID"
+                          },
+                          "name": {
+                            "type": "string",
+                            "example": "會員名"
+                          },
+                          "photo": {
+                            "type": "string",
+                            "example": "頭貼網址"
+                          }
+                        }
+                      },
+                      "createdAt": {
+                        "type": "string",
+                        "example": "追蹤時間"
+                      }
+                    }
+                  }
+                },
+                "following": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "user": {
+                        "type": "object",
+                        "properties": {
+                          "_id": {
+                            "type": "string",
+                            "example": "會員ID"
+                          },
+                          "name": {
+                            "type": "string",
+                            "example": "會員名"
+                          },
+                          "photo": {
+                            "type": "string",
+                            "example": "頭貼網址"
+                          }
+                        }
+                      },
+                      "createdAt": {
+                        "type": "string",
+                        "example": "追蹤時間"
+                      }
+                    }
+                  }
+                }
+              }
+            },
+            "posts": {
+              "type": "object",
+              "properties": {
+                "_id": {
+                  "type": "string",
+                  "example": "貼文ID"
+                },
+                "content": {
+                  "type": "string",
+                  "example": "貼文內容"
+                },
+                "image": {
+                  "type": "string",
+                  "example": "圖片網址"
+                },
+                "likes": {
+                  "type": "array",
+                  "example": [
+                    "會員ID"
+                  ],
+                  "items": {
+                    "type": "string"
+                  }
+                },
+                "comments": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "_id": {
+                        "type": "string",
+                        "example": "留言ID"
+                      },
+                      "user": {
+                        "type": "object",
+                        "properties": {
+                          "_id": {
+                            "type": "string",
+                            "example": "會員ID"
+                          },
+                          "name": {
+                            "type": "string",
+                            "example": "會員名"
+                          },
+                          "photo": {
+                            "type": "string",
+                            "example": "頭貼網址"
+                          }
+                        }
+                      },
+                      "post": {
+                        "type": "string",
+                        "example": "貼文ID"
+                      },
+                      "comment": {
+                        "type": "string",
+                        "example": "留言內容"
+                      },
+                      "createdAt": {
+                        "type": "string",
+                        "example": "留言時間"
+                      }
+                    }
+                  }
+                },
+                "createdAt": {
+                  "type": "string",
+                  "example": "貼文建立時間"
+                }
+              }
             }
           }
         }
